# sblim-cmpi-base

./: Makefile  README.md  sblim-cmpi-base-1.6.0-provider-register-sfcb-init.patch  sblim-cmpi-base-1.6.1-max-cpu-frequency.patch  sblim-cmpi-base-1.6.1-provider-register-fix.patch  sblim-cmpi-base-1.6.1-wrong-UserModeTime-and-KernelModeTime.patch  sblim-cmpi-base-1.6.2-max-cpu-frequency.patch  sblim-cmpi-base-1.6.2-prov-reg-sfcb-systemd.patch  sblim-cmpi-base-1.6.2-wrong-UserModeTime-and-KernelModeTime.patch  sblim-cmpi-base.spec
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  OSBase_BaseBoard.c  OSBase_BaseBoard.h  OSBase_Common.c  OSBase_Common.h  OSBase_ComputerSystem.c  OSBase_ComputerSystem.h  OSBase_OperatingSystem.c  OSBase_OperatingSystem.h  OSBase_OperatingSystemStatisticalData.c  OSBase_OperatingSystemStatisticalData.h  OSBase_Processor.c  OSBase_Processor.h  OSBase_UnixProcess.c  OSBase_UnixProcess.h  README  README.INDICATION  README.TEST  README.tog-pegasus  acinclude.m4  cmpiOSBase_BaseBoard.c  cmpiOSBase_BaseBoard.h  cmpiOSBase_BaseBoardProvider.c  cmpiOSBase_CSBaseBoardProvider.c  cmpiOSBase_CSProcessorProvider.c  cmpiOSBase_Common.c  cmpiOSBase_Common.h  cmpiOSBase_ComputerSystem.c  cmpiOSBase_ComputerSystem.h  cmpiOSBase_ComputerSystemProvider.c  cmpiOSBase_OSProcessProvider.c  cmpiOSBase_OperatingSystem.c  cmpiOSBase_OperatingSystem.h  cmpiOSBase_OperatingSystemProvider.c  cmpiOSBase_OperatingSystemStatisticalData.c  cmpiOSBase_OperatingSystemStatisticalData.h  (+21 more)
src/mof/: Linux_Base.mof  Linux_Base.registration  Linux_BaseIndication.mof  Linux_BaseIndication.registration
src/test/: test-cmpi-base.sh
src/test/cim/: Linux_BaseBoard.cim  Linux_CSBaseBoard.cim  Linux_CSProcessor.cim  Linux_ComputerSystem.cim  Linux_OSProcess.cim  Linux_OperatingSystem.cim  Linux_OperatingSystemStatisticalData.cim  Linux_OperatingSystemStatistics.cim  Linux_Processor.cim  Linux_RunningOS.cim  Linux_UnixProcess.cim
src/test/indication/: PegasusCreateFilter.localhost.xml  PegasusCreateHandler.localhost.xml  PegasusCreateSubscription.localhost.xml  PegasusDeleteFilter.localhost.xml  PegasusDeleteHandler.localhost.xml  PegasusDeleteSubscription.localhost.xml  SFCBCreateFilter.localhost.xml  SFCBCreateHandler.localhost.xml  SFCBCreateSubscription.localhost.xml  SFCBDeleteFilter.localhost.xml  SFCBDeleteHandler.localhost.xml  SFCBDeleteSubscription.localhost.xml
src/test/system/linux/: Linux_BaseBoard.system  Linux_CSBaseBoard.system  Linux_CSProcessor.system  Linux_ComputerSystem.system  Linux_OSProcess.system  Linux_OperatingSystem.system  Linux_OperatingSystem.version.sh  Linux_OperatingSystemStatisticalData.system  Linux_OperatingSystemStatistics.system  Linux_Processor.pl  Linux_Processor.system  Linux_RunningOS.system  Linux_UnixProcess.pl  Linux_UnixProcess.system  createKeyFiles.sh
